Refine PDF layout/flow for Part III

--- a/content/iii-open-questions/15.md
+++ b/content/iii-open-questions/15.md
@@ -62,15 +62,19 @@ The biaxial restraint of the canvas alters the strain distribution around the ta
 
 Bicubic-spline modeling (validated by ESPI) was the first computational model of a painting to incorporate the stretcher, staples, corner folds, and frictional forces. The inclusion in the model of the measured coefficient of friction of 0.63 for a pine stretcher bar showed that areas of high strain move outward toward the edges of the stretcher. [Figures 15.2](#fig-15-2) and [15.3](#fig-15-3) compare the measured strain obtained using ESPI with the modeled strain for the same canvas properties and loading conditions. The close correlation of the two distributions in terms of overall magnitude and specific features is very good. This gives a high level of confidence in using a bicubic-spline model to predict modes of failure and improve upon the present methods of tensioning canvas by simulating the strains induced in canvas under different conditions ({% cite 'Brew, Lewis, and Young 2016' %}).
 
-{% figure 'fig-15-2' %}
+{% figure 'fig-15-2' 'pdf-no-bottom-border' %}
 
 {% figure 'fig-15-3' %}
 
 ESPI has also been a useful tool for evaluating structural conservation treatments, for instance, tear mending. A painting will have high strains near the tear and strain concentrations at the ends of the tear, which are sites for potential propagation of the tear. If a tear is close to a corner or a tack/staple, this situation will be exacerbated because of the nonuniform loading. Implicit in restoring the mechanical integrity of a painting is the requirement to reestablish a uniform strain field across the painting—or at least one whose average strain is commensurate ({% cite 'Young 2003' %}). This can be seen for the Heiber (thread-by-thread) tear-mend strain map shown in [figure 15.4](#fig-15-4) for an acrylic-primed canvas under 50 N biaxial tension. Redistribution, reduction, or eradication of strain concentrations (one color in the map) implies a uniform strain field. Both the patch ([fig. 15.5](#fig-15-5)) and the Heiber mend demonstrate that this can be achieved to some degree.
 
-{% figure 'fig-15-4' %}
+<div class="no-break-container pdf-float-top">
+
+{% figure 'fig-15-4' 'pdf-no-bottom-border' %}
 
 {% figure 'fig-15-5' %}
+
+</div>
 
 In both cases, residual strain concentrations are present. For the Heiber—or any equivalent tear mend—reducing these concentrations below these levels is very hard to achieve by visual inspection alone. A “perfect” mend would eliminate strain concentrations around the original fracture site, preventing potential propagation of the tear. Similarly, any patch should have high fracture toughness and minimal stiffness. The patch strain map (see [fig. 15.5](#fig-15-5)) shows that the level of strain concentrations has been reduced, but small discontinuities in strain occur at the edges of the patch.
 
@@ -90,11 +94,11 @@ The literature on the moisture response of canvas paintings and the key findings
 
 Most of the data in the literature on moisture response relate to uniaxial testing. The results, however, can be misleading, as uniaxially the canvas is unconstrained in one direction, and this is not representative of the stresses that build up under biaxial constraint on a stretcher. Nonetheless, careful experimental design and interpretation can mitigate this difference. One of the most valuable resources for measuring moisture response has come from deaccessioned paintings and from nineteenth-century primed loose-linings. [Figure 15.6](#fig-15-6) shows the typical load response in the weft and warp direction for a primed loose-lining produced by Roberson colormen ({% cite 'Carlyle, Young, and Jardine 2008' %}). The tension in the two directions drops until an inversion occurs at 70% RH, where the tension starts to rise as RH increases.
 
-{% figure 'fig-15-6' %}
+{% figure 'fig-15-6' 'pdf-float-top pdf-no-bottom-border' %}
 
 This pattern occurs for many oil-primed canvases (loose-linings), as was demonstrated by Hedley under uniaxial tension ({% cite 'Hedley 1988' %}). The initial drop in tension is attributed to the size layer becoming softer as it absorbs moisture until it reaches a gelatinous state. Simultaneously, the fibers in the canvas are absorbing moisture. At some point, the swollen fibers cause the canvas to contract, and because it is tacked in place the tension rises. Typically, the tension in the weft direction increases significantly more than the warp because it has less crimp. The major influences on where this inversion occurs are weave density and the glue-size application. Inversions have been measured from between 65% and 85% RH for nineteenth-century English commercially glue-sized oil-primed canvases and glue-sized new canvas. [Figure 15.7](#fig-15-7) shows the response of another Roberson primed loose-lining with the inversion at 65% RH ({% cite 'Carlyle, Young, and Jardine 2008' %}; {% cite 'Carr et al. 2003' %}).
 
-{% figure 'fig-15-7' %}
+{% figure 'fig-15-7' 'pdf-float-top' %}
 
 ### Moisture Response of Linings
 
