--- a/content/iii-open-questions/16.md
+++ b/content/iii-open-questions/16.md
@@ -78,7 +78,7 @@ In order to apply this technology to yarn samples and use it as a standard metho
 
 To develop the standard protocol, test measurements were conducted on a new fabric using the above criteria. The use of an identical fabric ensured the comparability of the different settings of the testing machine. The resulting standard protocol is outlined in [table 16.2](#table-16-2), which shows the final parameters that allowed us to fulfill our criteria.
 
-{% figure 'table-16-2' 'pdf-float-top' %}
+{% figure 'table-16-2' %}
 
 For conducting a measurement for one canvas, the following steps were performed:
 
