--- a/content/iii-open-questions/19.md
+++ b/content/iii-open-questions/19.md
@@ -89,7 +89,7 @@ An example of the importance of mock-ups and of monitoring temperature uniformit
 
 In 2018, Forest compared the two formulations in a study undertaken at the Centre de Conservation du Québec ({% cite 'Forest 2019' %}). As in the previous tests, two reactivation temperatures (65°C and 70°C) and two holding times (0 and 10 minutes at the activation temperature) were used ([fig. 19.4](#fig-19-4)). The nap-bond strength of both formulations was strongly influenced by temperature, more than doubling in force between 65°C and 70°C. Based on what was considered a reliable bond, 0.33–0.41 kN/m,[^9] shown by the red lines in [figure 19.4](#fig-19-4), only lining at 70°C with a duration of ten minutes was successful.
 
-{% figure 'fig-19-4' %}
+{% figure 'fig-19-4' 'pdf-float-top' %}
 
 These results corroborate an earlier study by Ploeger et al. of the two formulations used in solution as a consolidant for painted surfaces ({% cite 'Ploeger, McGlinchey, and de la Rie 2015' %}). The original Beva 371 was shown to have a larger tack window with a gradual increase in tack, while Beva 371b had a narrow tack window with a sudden increase in tack. In summary, if the tack window (of any adhesive) becomes too narrow, or if time at the activation temperature is a determining factor in obtaining an acceptable bond, then temperature uniformity and monitoring become even more critical.
 
