Refine PDF layout/flow for Part IV

--- a/content/iv-case-studies/24.md
+++ b/content/iv-case-studies/24.md
@@ -86,7 +86,7 @@ Following looming, planar deformations and creases were resolved through humidif
 
 Three clear vertical panels composed of polycarbonate sheet stabilized with wooden frames were fabricated to provide a surface for the front of the painting during upright humidification ([fig. 24.4](#fig-24-4)). These panels were easily adjusted and movable using photographic light stands and adapted easels. The panels were covered in silicone-release Mylar and positioned against the face of the painting to provide a stable working surface during treatment. Damp blotters were positioned on the verso of the canvas and layered with Mylar and a metal plate. As one conservator held the blotter and metal plate in place, a colleague applied rare earth magnets to the panel on the front. The strength and number of magnets could be adjusted to apply variable amounts of pressure to the canvas and blotter.[^9] The clear panels allowed conservators to monitor the front of the painting ([fig. 24.5](#fig-24-5)).
 
-{% figure 'fig-24-4' %}
+{% figure 'fig-24-4' 'pdf-no-bottom-border' %}
 
 {% figure 'fig-24-5' %}
 
@@ -116,7 +116,7 @@ The 6-inch-wide hook-side Velcro (Hook 89) was attached to the back of the strai
 
 In a carefully planned series of steps to prepare for stretching, the edge-lined painting was unloomed and the aluminum strainer removed ([fig. 24.7](#fig-24-7)) The two halves of the original wooden strainer were then placed on the verso of the painting to ensure a close fit. After it was ensured the painting would fit onto its strainer, the two halves of the strainer were loose-lined with Trevira CS fabric, and the painting was successfully stretched onto its strainer using the Velcro edge-lining.
 
-{% figure 'fig-24-7' %}
+{% figure 'fig-24-7' 'pdf-float-top' %}
 
 ## Continuing Work and Conclusion
 
