--- a/content/iv-case-studies/25.md
+++ b/content/iv-case-studies/25.md
@@ -130,11 +130,11 @@ During my study, and after seeing the extent of the damage, I decided to focus m
 
 The painting chosen from the collection is a depiction of the water spirit Mami Wata ([fig. 25.3](#fig-25-3)) dating from 1960. It is signed by Nkulu Tommy Emman, an unknown artist. Jewsiewicki-Koss said that the name Nkulu was used by many painters, and it was a common name in Lubumbashi. The artists changed their signatures frequently, which makes attributions complicated. This painting might have been bought by a Congolese owner, probably in the Kasumbalesa market in the Democratic Republic of the Congo. Mami Wata is the goddess of rivers, revered in Congo, other parts of Africa, and Haiti and Brazil—and feared by fishermen. In the painting, she looks like a European mermaid, with white skin and blue eyes, the temptress of Western luxury, her idealistic beauty further signified pictorially by her wristwatch and jewelry.
 
-{% figure 'fig-25-3' %}
+{% figure 'fig-25-3' 'pdf-float-top pdf-no-bottom-border' %}
 
 The painting is executed on a thin cotton support patterned with flowers and measures 83 × 54 cm. Some information is written on the back: numbers, details of acquisitions, and notes ([fig. 25.4](#fig-25-4)). The paint layer appears to be acrylic that was thinly applied. There is no ground layer, varnish, or stretcher. It is currently stored and laid flat in a sliding drawer.
 
-{% figure 'fig-25-4' %}
+{% figure 'fig-25-4' 'pdf-float-top' %}
 
 ### State of Preservation
 
@@ -160,13 +160,13 @@ To prepare for the lining, the face of the painting was treated (see [fig. 25.3]
 
 For the lining, I laid the Petex on the hot table with one layer of Beva 371 film (65 µm), cut to the same dimensions as the painting. These two coats were heated for twenty-five minutes at 65°C, then I let them cool down to seal them. Next, I carefully positioned the original painting on the synthetic layers (Petex and Beva 371 film) and heated it at the same temperature and for the same duration. This treatment was successful. The lining is thin, easy to apply, transparent, and resistant to degradation over time ([figs. 25.5](#fig-25-5), [25.6](#fig-25-6)).
 
-{% figure 'fig-25-5' %}
+{% figure 'fig-25-5' 'pdf-float-top pdf-no-bottom-border' %}
 
-{% figure 'fig-25-6' %}
+{% figure 'fig-25-6' 'pdf-float-top' %}
 
 As a last step, I continued with the restoration: filling lacunae with the synthetic compound Modostuc and texturing some of the losses. The retouches were made with Gamblin Conservation Colors. From now on, the painting can be handled safely and easily. The support is consolidated, and the extra layer supports the whole painting without hiding the inscriptions ([fig. 25.7](#fig-25-7)).
 
-{% figure 'fig-25-7' %}
+{% figure 'fig-25-7' 'pdf-float-top' %}
 
 ## Conclusion
 
