Refine PDF layout/flow for Part V

--- a/content/v-adhesives/28.md
+++ b/content/v-adhesives/28.md
@@ -91,7 +91,7 @@ A different activation approach is necessary when access to the bonding surface 
 
 The application is identical for both adhesives. To uniformly activate the inserted dry mesh, a nonwoven capillary fabric[^13] is used. This material can transport water along its directed fibers and then disperse it onto the mesh. A protrusion of some millimeters allows access for the water to be applied. The adhesive mesh and the capillary fabric are first cut to match the shape of the detachment. Then both the mesh and the capillary fabric are inserted between the canvas layers ([fig. 28.7](#fig-28-7)). An additional layer of Melinex on top is advisable to protect the original canvas from being wetted, and a light weight is used to keep the layers in contact during the procedure.
 
-{% figure 'fig-28-7' %}
+{% figure 'fig-28-7' 'pdf-float-top' %}
 
 Then water is added onto the nonwoven fabric’s edge until it is completely saturated. Immediately after complete saturation—within about five seconds—the fabric and Melinex are removed with a quick pull to prevent the mesh from sticking to the fabric. Finally, pressure is applied (10 g/cm²) until the adhesive has dried. This activation method reduces the amount of water twentyfold compared to the spray activation described above. The resulting bond was found to be strong enough to fix the canvas to the lining fabric anew, yet for reversibility, the lining can easily be peeled off.[^14]
 
