--- a/content/v-adhesives/29.md
+++ b/content/v-adhesives/29.md
@@ -133,11 +133,11 @@ However, it must be considered that in reality the resulting stresses[^17] and s
 
 Since the test series have been repeated several times over the last years, two average measured F<sub>max</sub> values are shown in [figure 29.2](#fig-29-2). For each of the different adhesives and bonding techniques, the lowest and highest F<sub>max</sub> mean values from all test series up to 2019 are presented. The order does not correspond to any chronological sequence. Although the exact same test setup and experimental design (test specimen preparation, testing,[^18] and evaluation) were always followed, and at least ten to twenty test specimens of one type were tested each time, the average mean values are hardly reproducible due to scattering results.
 
-{% figure 'fig-29-2' %}
-
 Because [figure 29.2](#fig-29-2) shows overall low and high average measured values, standard deviations as absolute scatter measures in the diagrams were omitted. Instead, [figure 29.3](#fig-29-3) shows the relative coefficients of variation corresponding to [figure 29.2](#fig-29-2). The variation coefficients of F<sub>max</sub> lie within a range of approximately 6%–30% (in one case almost 40%), which corresponds to quite a large range of individual measured values from which the mean value is derived. In comparison, the variation coefficient of intact canvas samples shows a value of only approximately 6%, which probably results from variations in the natural fiber and the canvas production. Therefore, bonding causes the scattering of the measured values of all adhesives tested.
 
-{% figure 'fig-29-3' %}
+{% figure 'fig-29-2' 'pdf-float-top pdf-no-bottom-border' %}
+
+{% figure 'fig-29-3' 'pdf-float-top' %}
 
 Extensive investigations into this problem made clear that the scattering is to be regarded as inherent in the technology: irrespective of the greatest possible standardization of the substrate to be bonded, there are always unknown differences in the individual sectional structure, geometry, length, torsion, and porosity of fibers and threads. All these aspects result in different wetting, penetration, and formation of the adhesive joint and its interphases as well as in different mechanical behavior under tensile testing, even with a standardized quantity and application of the adhesive. Thread-by-thread bonds inevitably scatter in their bond strengths. In practice, conservators must therefore always consider both the best case and the worst case, since the strengths of single-thread bonds can differ.[^19]
 
