Refine PDF layout/flow for Part VI

--- a/content/vi-interventions/30.md
+++ b/content/vi-interventions/30.md
@@ -25,7 +25,7 @@ A cadre of conservators were similarly advocating for what might be described as
 
 Probably the conservator most associated with this minimal approach was Winfried Heiber ([fig. 30.1](#fig-30-1)), a mentor for many students and like-minded colleagues even before he became a professor at the Hochschule für Bildende Künste (Academy of Fine Arts) Dresden. Today the “Heiber method” of tear mending is widely accepted as the primary technique for avoiding the “need” to line a torn painting.
 
-{% figure 'fig-30-1' %}
+{% figure 'fig-30-1' 'pdf-float-top' %}
 
 Oddly enough, through my discussions with Heiber over the years, he rejected the term *minimal intervention* to describe the philosophy he followed, pointing out that simply adhering a new canvas to the reverse of a painting, and then filling and retouching a tear, could be considered *less* of an actual intervention than manipulating each thread of a tear and addressing all of the physical demands and tensile stresses throughout the multiple layers of a torn painting.
 
@@ -45,7 +45,7 @@ Work stretchers can be indispensable when treating tented paint caused by a shru
 
 I modified the system to avoid flattening the tacking margins by flipping the blocks over and turning them on edge. Since the tension is equilibrial, the tacking margins remain at a right angle ([fig. 30.3](#fig-30-3)). Alternatively, easily sourced items (such as Hollytex, packaging tape, and bulldog clips) can be used to suspend paintings in standard artist’s stretchers (see [fig. 30.3](#fig-30-3)). Beva film is applied to the Hollytex and the stretcher to ensure that the tape sticks.
 
-{% figure 'fig-30-3' %}
+{% figure 'fig-30-3' 'pdf-float-top' %}
 
 Often, damage is seen only along the bottom of a painting. In these cases, only the bottom stretcher member may need to be removed. A stretcher can be assembled to “hug” the three unaffected sides—either clamped together or held with mending plates. (Tip: Place holes where they can be reused for the backing board.)
 
@@ -61,7 +61,7 @@ Another alternative that is particularly useful when the reach is too far is to 
 
 Next, adhesive is locally fed into cracks and under lifting paint while a hot-air tool and silicone shaper are used to set the paint down on the front. To remove the distortion created by the watch glass, a reptile warming mat (purchased at a pet store) is placed behind the painting. A piece of silicone-release Mylar is used to protect the painting and a small sandbag weight is used for pressure ([fig. 30.6](#fig-30-6)).
 
-{% figure 'fig-30-6' %}
+{% figure 'fig-30-6' 'pdf-float-top pdf-no-bottom-border' %}
 
 ## Suction Platen
 
@@ -85,9 +85,13 @@ Alternatively, a small board can be clamped to the inside of the stretcher to av
 
 A suction platen was used during the tear mending to humidify the area to remove planar distortions, and again while filling. Using the platen at low suction during filling allows the wet fill material to be drawn into the canvas voids—which helps keep the tear in plane—and to take on the weave texture of the canvas. A small, thin piece of Stabiltex impregnated with Beva can be used to cover the mend both to act as a moisture barrier for the repair and to add a second line of security if the mend were ever to fail ([fig. 30.10](#fig-30-10)). [Figure 30.11](#fig-30-11) shows the difference at the tear site before and after treatment.
 
-{% figure 'fig-30-10' %}
+<div class="no-break-container pdf-float-top">
 
-{% figure 'fig-30-11' %}
+{% figure 'fig-30-10' 'pdf-no-bottom-border' %}
+
+{% figure 'fig-30-11' 'pdf-85-percent-width' %}
+
+</div>
 
 ## Conclusion
 
