--- a/content/vi-interventions/31.md
+++ b/content/vi-interventions/31.md
@@ -132,7 +132,7 @@ The threads were then rewoven, connecting the overlapping and intertwining weft 
 
 As sections were completed, Gore-Tex suture reinforcements were interwoven into the back of the weave matrix to bridge the tear ([fig. 31.5](#fig-31-5)). Gore-Tex monofilament size CV-5 was selected as the most appropriate suture due to its size, flexibility, and strength. Before being woven into the canvas, the Gore-Tex threads were tinted to match the tone of the canvas using Orasol dyes dissolved in ethanol. Locking forceps were used to handle the needle, and starting approximately 2 inches before the beginning of the tear, the sutures were threaded into the canvas following the weave pattern of the weft threads, which ran perpendicular to the direction of the tear. The ends were anchored and looped in the same fashion as described in case study 2 (see [fig. 31.2](#fig-31-2)).
 
-{% figure 'fig-31-5' %}
+{% figure 'fig-31-5' 'pdf-float-top' %}
 
 The sutures were introduced every third, fourth, and fifth weft thread, and all were staggered in length. It was determined that the sutures would be threaded under every warp thread. First, this was because the canvas weave was so large the sutures could easily pass through without disrupting the bond between the ground layer and the canvas. Second, the closer and more aligned to the weft thread the sutures were, the more sympathetic the support from the reinforcements would be to the canvas weave structure, ultimately creating a stronger and more stable bridge.
 
@@ -160,7 +160,7 @@ Before Heiber’s thread-by-thread tear-mending technique could be applied, torn
 
 Once the mend had been completed, verso reinforcements could be added to appropriate areas ([fig. 31.7](#fig-31-7)). Staggered and irregular lengths of Gore-Tex sutures were threaded through the weave, running perpendicular to section B of the tear. Areas of canvas with paint on the surface were avoided because the fabric was too brittle and degraded for the sutures.
 
-{% figure 'fig-31-7' %}
+{% figure 'fig-31-7' 'pdf-float-top' %}
 
 To support areas where the Gore-Tex sutures could not be integrated into the weave, Japanese paper “sutures” were used as an alternative. These sutures, approximately 1/32 inch (0.8 mm) in width and varied in length, were infused with liquid Beva 371 and minimally heat-set to the back of the canvas where sections A and B of the tear intersected, perpendicular to section B.
 
