--- a/content/vi-interventions/35.md
+++ b/content/vi-interventions/35.md
@@ -84,7 +84,7 @@ As a reminder, a transfer is the replacement of the original support of a painti
 
 In May 2016, *The Sacrifice of Abraham* remained submerged for seventy-two hours, due to the disaster that occurred in the Musée Girodet storerooms after the flooding of the Loing river in the city of Montargis. The deep immersion of the painting caused a significant alteration of the support of the artwork: very pronounced roof-shape lifting of the paint layer ([fig. 35.4](#fig-35-4)), separation of the canvas, and—as we discovered later—powdering of the ground layer. The transfer as a whole was weakened, and thus a complete dismounting was necessary.
 
-{% figure 'fig-35-4' %}
+{% figure 'fig-35-4' 'pdf-float-top' %}
 
 What was visually disturbing was that the painting appeared to still be on the wooden panel: the cracks, mainly horizontal, followed the grain of the former support and the joints between the former boards were visible, so that anyone facing the painting would have thought that it was still on a wooden panel.
 
