--- a/content/vi-interventions/36.md
+++ b/content/vi-interventions/36.md
@@ -25,7 +25,7 @@ In November 2017, the Government Museum of Rajasthan approached Indira Gandhi Na
 
 Alwar (a former principality) is a prominent city in the state of Rajasthan and is popularly known as the gateway to Rajasthan. The city is situated 160 kilometers southeast of New Delhi, the capital of India, and is part of the National Capital Region. In ancient times, this area was known as Matsya Mahajanpad; it is mentioned in the Buddhist text *Anguttar Nikaya* as being among sixteen *Mahajanpadas*. Bairath (present-day Viratnagar) was the capital of Matsya Desh ([fig. 36.1](#fig-36-1)).
 
-{% figure 'fig-36-1' %}
+{% figure 'fig-36-1' 'pdf-float-top' %}
 
 The Alwar museum is known for its unique, varied collection; it houses around fourteen thousand objects, including textiles, miniatures, rare books, canvas paintings, wooden objects, furniture, a natural history collection, metalwork, arms and armor, decorative art, and terracotta and stone objects. The collection also has twenty-six canvas paintings; twenty-four were on display at the time of our work, while two were kept in storage.
 
@@ -101,7 +101,7 @@ After finishing our detailed study, we decided on the following steps for treati
 
 Patches were found in abundance on almost all the paintings. Three phases of patch mending were found: one on the original support, one on the lining canvas, and sometimes a third patch on the patch applied to the lining canvas. The material of the patch was cotton, but in some cases electrical tape or paper was also used for mending purposes ([fig. 36.4](#fig-36-4)), and these were applied without removing older patches. The mending itself caused problems in some paintings. The dimension of each patch was larger than the tear it addressed, and the density of cloth greater than that of the original canvas, causing these patches to be clearly visible on the image layer and leading to problems in the paint layer ([fig. 36.5](#fig-36-5)).
 
-{% figure 'fig-36-4' %}
+{% figure 'fig-36-4' 'pdf-no-bottom-border' %}
 
 {% figure 'fig-36-5' %}
 
