--- a/content/vi-interventions/34.md
+++ b/content/vi-interventions/34.md
@@ -28,7 +28,7 @@ At the end of the conflict, it proved necessary to repair the damage caused by i
 
 Among the most active restorers were without doubt the Podio family, originally from Bologna. We have at least a dozen documented linings executed by them, and most of these date from the 1950s ([fig. 34.1](#fig-34-1-a)) and are still effective as supports for the paintings.[^4] In their estimates, the Podio family often indicate hemp as the lining textile used, but more importantly we note that they often repeated the operation they had just concluded with a second lining that involved a double or even a triple layer of glue paste, which would be filtered through the weave and the excess removed by applying great pressure; the ironing operation, on the other hand, was not repeated.[^5] The result was a lining of great rigidity and of high susceptibility to changes in humidity and temperature because of the amount of glue on the reverse.
 
-{% figuregroup '2' 'fig-34-1-a, fig-34-1-b' '**Figure 34.1** G. F. Barbieri, called Il Guercino (Italian, 1591–1666), *Flagellation*, 1657. Oil on canvas, 244 × 187.5 cm (96 × 73 4/5 in.). (a) Before lining. (b) After Podio’s 1947 lining. Images: Barberini Corsini National Galleries, Rome. (a) ICCD-Gabinetto Fotografico Nazionale, Fondo GFN, n. inv E47623, with authorization of Istituto Centrale per il Catalogo e la Documentazione, MiBACT, further reproduction not authorized / (b) Gallerie Nazionali d’ arte antica (MiBACT)–Biblioteca Hertziana, Istituto Max Planck per la storia dell’arte/Enrico Fontolan' %}
+{% figuregroup '2' 'fig-34-1-a, fig-34-1-b' '**Figure 34.1** G. F. Barbieri, called Il Guercino (Italian, 1591–1666), *Flagellation*, 1657. Oil on canvas, 244 × 187.5 cm (96 × 73 4/5 in.). (a) Before lining. (b) After Podio’s 1947 lining. Images: Barberini Corsini National Galleries, Rome. (a) ICCD-Gabinetto Fotografico Nazionale, Fondo GFN, n. inv E47623, with authorization of Istituto Centrale per il Catalogo e la Documentazione, MiBACT, further reproduction not authorized / (b) Gallerie Nazionali d’ arte antica (MiBACT)–Biblioteca Hertziana, Istituto Max Planck per la storia dell’arte/Enrico Fontolan' 'pdf-float-top' %}
 
 That these linings should still be in place and largely effective is all the more notable. However, it is true that the environment of our galleries is essentially a dry one, with a rather low RH of around 40%—and therefore suitable for the preservation of this kind of restoration. In this context, I should mention a curious estimate given by D. Podio for work to be carried out on a *Virgin and Child* attributed to Raphael, in the Accademia di San Luca. Having recognized it as a transfer, he proposed an initial lining on a hemp canvas, with the consequent ironing and filling, then a second lining using not less than three hemp canvases and another ironing: “This would give back to the painting the appearance of a painting on wood.” His aim was therefore a rigidity that was not only functional but also aesthetic.[^6]
 
@@ -42,7 +42,7 @@ In the National Gallery, we have few examples of linings dating back to the nine
 
 One example of a painting with a nineteenth-century lining is *Glory of Saint Ignatius* ([fig. 34.2](#fig-34-2)), by A. Pozzo (inventory 1426). The restoration is dated 1884 on the stretcher, the canvas is of a heavy and tightly woven herringbone weave, and the adhesive is rich in animal glue. On the canvas are marks that seem to be the result of burns from the application of hot irons. The stretcher is pine, with crossbars and keys, but it is essentially inadequate; clearly evident on the picture surface are the stretcher marks, as well as flattening of the paint. The inscriptions that accompany the restoration, on the stretcher, are grammatically incorrect, once again relegating the restorers to the “mechanical,” uneducated sphere. Another *bozzetto* for Pozzo’s trompe l’oeil dome of the church of Saint Ignazio (inventory 1425) has very similar characteristics and was also lined in 1884, so one can infer that it was carried out by the same restorer.
 
-{% figure 'fig-34-2' %}
+{% figure 'fig-34-2' 'pdf-float-top' %}
 
 Many restorations coincided with the acquisition of the painting, for example, Giordano Luca’s *Ritratto di capomasteo (Cratete)* (inventory 1254), lined by Luigi Bartolucci in 1898. The stretcher may have been preserved from a previous intervention but adapted to make space for keys. The lining canvas is coarse, thick, and stained and has a large seam. It is interesting to compare this canvas to those in use by painters at the same time: the same kind of canvas was used for Horace Vernet’s *Portrait of Filippo Agricola*, painted in the 1820s and never lined.
 
@@ -108,7 +108,7 @@ Documents show the restorer Giovanni Principe, heir and son-in-law of Michelini,
 
 To conclude our survey going back in time, the oldest dated lining in the Barberini Galleries dates to the middle of the seventeenth century. The presence of the seal on the strainer dates its assembly, and therefore the lining of the painting, to 1641–42. The strainer is of chestnut with shouldered bridle joints that are not blocked, and a fine, regularly woven, plain-weave lining canvas is in every way comparable to a contemporary canvas that has never been lined ([fig. 34.6](#fig-34-6)).
 
-{% figure 'fig-34-6' %}
+{% figure 'fig-34-6' 'pdf-float-top pdf-85-percent-width' %}
 
 ## Conclusion
 
@@ -116,9 +116,9 @@ Among the paintings in our gallery are many works lined with wax resin, a system
 
 Seeking to implement a minimal structural intervention respectful of the aesthetic qualities of the works in our collection, our studio is focusing on developing thread-by-thread mending techniques for tears, as for Maratti’s *Portrait of Cardinal Barberini* (inventory 5001), as well as on a program of preventive conservation. This is also what led us to study again the ancient lining systems with glue paste, which are still effective after centuries, sustainable from an environmental point of view, and an almost unique example of a completely reversible intervention, as for instance in the *bozzetto* for *Vision of Saint Romualdo* ([fig. 34.9](#fig-34-9)), by A. Sacchi (inventory 4632), which has been delined.
 
-{% figuregroup '2' 'fig-34-7, fig-34-8' %}
+{% figuregroup '2' 'fig-34-7, fig-34-8' '' 'pdf-no-bottom-border' %}
 
-{% figure 'fig-34-9' %}
+{% figure 'fig-34-9' 'pdf-85-percent-width' %}
 
 {% backmatter %}
 
