Refine PDF layout/flow for Part V

--- a/content/vii-modern-contemporary/38.md
+++ b/content/vii-modern-contemporary/38.md
@@ -60,7 +60,7 @@ Wax-resin and Beva linings are less stiff and unyielding, but that can create pr
 
 {% figure 'fig-38-1' %}
 
-{% figure 'fig-38-2' %}
+{% figure 'fig-38-2' 'pdf-float-top pdf-no-bottom-border' %}
 
 The use of a very stiff lining material or interlayer, such as heavy Mylar, has proved successful in some cases, but in others such interventions only locked the partially flattened cracks in place. The same can be said for thickly flocked PVA adhesives, as noted above. Their stiffness overwhelmed the lining fabrics, and they cannot be reversed without a great deal of mechanical force or solvent ({% cite 'Rabin 1976' %}). Local treatments with patches have resulted in unsightly bulges over time, caused by the shrinking of adhesives combined with realignment of forces between those canvas fibers that are held in place by adhesives and those that are not ([fig. 38.3](#fig-38-3)).
 
